Avoid vertical scrollbar (or worse, double) due to tall metadata panel

--- a/kahuna/public/stylesheets/main.css
+++ b/kahuna/public/stylesheets/main.css
@@ -456,7 +456,7 @@ a:focus {
     float: right;
     font-family: "Guardian Agate Sans 1 Web";
     font-size: 1.4rem;
-    max-height: 100vh;
+    max-height: calc(100vh - 48px); /* viewport - top-bar */
     padding: 10px 10px;
     overflow: auto;
     width: 300px;
